--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -57,6 +57,9 @@
       padding-top: 0.1px;
     }
   }
+  .layout-page-container-wrap {
+    background-color: white;
+  }
 }
 .ant-layout-footer {
   flex: 0 0 auto;
