add global loading antimation

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -65,3 +65,19 @@
   flex: 0 0 auto;
 
 }
+
+.btn-orange {background-color:#dc801f; color:white;border-color:#dc801f;}
+.btn-orange:hover {background-color:#dc801f; color:white;border-color:#dc801f;}
+.btn-orange:focus {background-color:#dc801f; color:white;border-color:#dc801f;}
+
+.btn-red {background-color:#ef5a5a; color:white;border-color:#ef5a5a;}
+.btn-red:hover {background-color:#ef5a5a; color:white;border-color:#ef5a5a;}
+.btn-red:focus {background-color:#ef5a5a; color:white;border-color:#ef5a5a;}
+
+.btn-green {background-color:#87d068; color:white;border-color:#87d068;}
+.btn-green:hover {background-color:#93e272; color:white;border-color:#87d068;}
+.btn-green:focus {background-color:#93e272; color:white;border-color:#87d068;}
+
+.btn-lightblue {background-color:#2db7f5; color:white;border-color:#2db7f5;}
+.btn-lightblue:hover {background-color:#2db7f5; color:white;border-color:#2db7f5;}
+.btn-lightblue:focus {background-color:#2db7f5; color:white;border-color:#2db7f5;}
